# ColdSrc

./: .gitignore  .gitmodules  CMakeLists.txt  LibraryList.cmake  README.md
appframework/: appframework.cmake  appframework.cpp  appframework.h  entry.cpp
game/: game.cmake  game_app.cpp  game_globals.h
game/shaders/: baseshader.h  circle_cs61.hlsl  circle_cs61.spv  screen_triangle.h  triangle_ps61.hlsl  triangle_ps61.spv  triangle_vs61.hlsl  triangle_vs61.spv
libcommon/: libcommon.cmake  module_factory.cpp  module_lib.cpp
public/: common_stl.h
public/appframework/: iapplication.h
public/libcommon/: module_factory.h  module_lib.h
public/rendersystem/: irendersystem.h  ishader.h  rendersystem_types.h
rendersystem/: descriptorsets.cpp  descriptorsets.h  rendersystem.cmake  rendersystem.cpp  rendersystem.h  rendertarget.cpp  rendertarget.h  shader.cpp  shader.h  utils.cpp  utils.h  vulkan_common.h
